# arescore-foundry

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  ARCHITECTURE.md  Makefile  PR_BODY.md  README.md  TASKS.md  bootstrap_issues.sh  codex.yml  compose.federated.yml  compose.rollup.yml  compose.single.yml  compose.staging.yml  compose.telemetry.yml  compose.yml  docker-compose.yml  fix_foundry_env.sh  frostgatecore.Dockerfile  mypy.ini  project_audit.toml  pytest.ini  requirements.txt  triage_terminate.sh  uses
.github/: PULL_REQUEST_TEMPLATE.md
_container_policies/: foundry.rego  training_gate.rego  training_gate_test.rego
arescore_foundry_lib/: __init__.py  pyproject.toml  requirements.txt
arescore_foundry_lib/policy/: __init__.py  audit.py  bundle.py  client.py
audits/: .gitignore
backend/: README.md
behavior_analytics/: Dockerfile  config.py  main.py  models.py  requirements.txt
blueprint/: manifest.yml  rules.yml  workplan.csv
common/: logging.py
diagnostics/: report-20250812-140749.txt  report-20250812-141349.json  report-20250812-141349.txt  report-20250812-164229.txt  report-20250812-164523.json  report-20250812-164523.txt  report-20250812-193901.txt
docs/: MVP-RUNBOOK.md  audit-retention.md  audit-tools.md  branding.md  rollup_env.md  telemetry_rollup.md
frontend/: .dockerignore  .env.production  Dockerfile  README.md  index.html  nginx-gzip.conf  nginx.conf  nginx.conf.bak.20250811-103821  nginx.conf.bak.20250811-103822  package-lock.json  package.json  tailwind.config.ts  (+1 more)
(+569 files in other folders)
