[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arescore-foundry-lib"
version = "0.1.0"
description = "Shared foundry utilities"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.28,<0.29",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["arescore_foundry_lib*"]
