[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "arescore_foundry_lib"
version = "0.1.0"
dependencies = [
    "httpx>=0.27,<1.0",
description = "Shared utilities for the Arescore Foundry services."
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
  {name = "Arescore"}
]

[tool.setuptools.packages.find]
include = ["arescore_foundry_lib*"]
